# Homework8

./: .gitignore  CMakeLists.txt  README.md  Task.txt  conanfile.txt  main.cpp
.github/workflows/: release.yml
include/bayan/: app.hpp  config.hpp  file_scan.hpp  find_duplicates.hpp  hasher.hpp  hashing.hpp  io_stats.hpp  lex_compare.hpp  masks.hpp  path_utils.hpp
src/: app.cpp  file_scan.cpp  find_duplicate.cpp  hasher.cpp  io_stats.cpp  lex_compare.cpp  masks.cpp  path_utils.cpp
